<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>GYMBROT</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21</javafx.version>
    </properties>

    <dependencies>

        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Oracle JDBC -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>23.6.0.24.10</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/ojdbc11.jar</systemPath>
        </dependency>

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.1</version>
        </dependency>

        <!-- JavaMail -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>

        <!-- Twilio -->
        <dependency>
            <groupId>com.twilio.sdk</groupId>
            <artifactId>twilio</artifactId>
            <version>9.14.0</version>
        </dependency>

        <!-- BCrypt -->
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>

        <!-- DigitalPersona SDK (huella dactilar) -->
        <dependency>
            <groupId>com.digitalpersona</groupId>
            <artifactId>dpotapi</artifactId>
            <version>1.6.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/dpotapi.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona</groupId>
            <artifactId>dpotjni</artifactId>
            <version>1.6.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/dpotjni.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona</groupId>
            <artifactId>dpfpenrollment</artifactId>
            <version>1.6.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/dpfpenrollment.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.digitalpersona</groupId>
            <artifactId>dpfpverification</artifactId>
            <version>1.6.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/dpfpverification.jar</systemPath>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.fxml</include>
                    <include>**/*.ttf</include>
                    <include>**/*.png</include>
                    <include>**/*.css</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>org.gymbrot.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>